[package]
name = "salvo-utils"
version = "0.0.5"
description = "hyper utilities"
readme = "README.md"
homepage = "https://salvo.rs"
documentation = "https://docs.rs/salvo-utils"
repository = "https://github.com/salvo-rs/salvo-utils"
license = "MIT"
authors = ["Sean McArthur <sean@seanmonstar.com>"]
keywords = ["http", "hyper", "hyperium"]
categories = ["network-programming", "web-programming::http-client", "web-programming::http-server"]
edition = "2018"

[dependencies]
hyper = "=1.0.0-rc.4"

pin-project-lite = "0.2.4"
tracing = { version = "0.1", default-features = false, features = ["std"] }
tokio = { version = "1", features = ["net", "rt", "time"] }

[dev-dependencies]
bytes = "1"
http-body-util = "0.1.0-rc.3"
tokio = { version = "1", features = ["macros", "test-util"] }

[features]
default = []

# Shorthand to enable everything
full = ["runtime"]
runtime = []